--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Righteous&display=swap");
+
 * {
     padding: 0;
     margin: 0;
@@ -8,4 +10,68 @@
 
 a {
     text-decoration: none;
+}
+
+body {
+    font-family: "DM Mono";
+}
+
+a,
+p {
+    text-transform: uppercase;
+    color: #000;
+    font-size: 1.1rem;
+    font-weight: 600;
+    line-height: 0.9;
+    display: block;
+}
+
+nav {
+    position: fixed;
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    z-index: 2;
+}
+
+.site-name a {
+    width: 4rem;
+    font-family: "Righteous";
+    font-size: 2rem;
+}
+
+.menu p {
+    padding: 0.75rem 1.25rem;
+    border-radius: 0.25rem;
+    background-color: #000;
+    color: #fff;
+}
+
+.hero {
+    position: relative;
+    width: 100%;
+    height: 100svh;
+    overflow: hidden;
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.hero-footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    z-index: 2;
 }
